style: correct the pagination styles of ng2-smart-table and fix the bug about md-select aligns with mdInput

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import "../styles/variables";
 app {
   display: block;
-  height: 100%; 
+  height: 100%;
   .btn-menu-toggle {
     position: absolute;
     z-index: 9999;
@@ -42,6 +42,14 @@ app {
     left: 0;
     z-index: 99;
     height: 3px;
+
+    .mat-progress-bar-buffer {
+      background-color: $loading-bar-color;
+    }
+
+    .mat-progress-bar-fill::after {
+      background-color: $brand-color;
+    }
   }
   .mat-sidenav-container {
     width: 100%;
